--- a/Ativ_2_Mentoria/Views/Gasto/Index.cshtml
+++ b/Ativ_2_Mentoria/Views/Gasto/Index.cshtml
@@ -4,8 +4,8 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-
+<h1>Lista de Gastos</h1>
+<h1>@ViewBag.ValorTotal</h1>
 <p>
     <a asp-action="Create">Create New</a>
 </p>
@@ -23,6 +23,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.DateAdd)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Categoria)
             </th>
             <th></th>
         </tr>
@@ -43,7 +46,10 @@
                 @Html.DisplayFor(modelItem => item.DateAdd)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new {id = item.Id}) |
+                @Html.DisplayFor(modelItem => item.Categoria.Name)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                 @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.Id })
             </td>
